aded tweets ,scroll effect to twitter app

--- a/src/styles/component.css
+++ b/src/styles/component.css
@@ -118,3 +118,12 @@
 .switch-toggle input:focus + .slider-toggle {
   box-shadow: 0 0 1px #3b82f6;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
