updated portfolio app

--- a/src/styles/bear.css
+++ b/src/styles/bear.css
@@ -1,12 +1,12 @@
 .bear .markdown a {
-  @apply text-red-500 dark:text-red-400;
+  @apply text-blue-600 dark:text-blue-400 hover:underline;
 }
 
 .bear .markdown h1,
 .bear .markdown h2,
 .bear .markdown h3,
 .bear .markdown h4 {
-  @apply font-bold relative text-c-800;
+  @apply font-bold relative text-c-900 dark:text-c-100;
 }
 
 .bear .markdown h1,
@@ -60,7 +60,7 @@
 }
 
 .bear .markdown p {
-  @apply mt-6;
+  @apply mt-6 text-c-900 dark:text-c-100 leading-7;
 }
 
 .bear .markdown h2 + p,
@@ -79,7 +79,7 @@
 }
 
 .bear .markdown ul > li::marker {
-  @apply text-red-500 dark:text-red-400;
+  @apply text-blue-500 dark:text-blue-400;
 }
 
 .bear .markdown ol {
@@ -91,11 +91,11 @@
 }
 
 .bear .markdown code {
-  @apply text-sm border border-c-300 rounded py-0.5 px-1 bg-c-50;
+  @apply text-sm border border-c-300 rounded py-0.5 px-1 bg-c-50 text-c-900;
 }
 
 .bear .markdown pre {
-  @apply mt-2 text-sm;
+  @apply mt-2 text-sm leading-7;
 }
 
 .bear .markdown pre code {
